package org.tikv.flink.coordinator.grpc; 

service CoordinatorService {
  rpc transactions(TxnRequest) returns (TxnResponse);
}

message TxnRequest {
  enum Action {
    OPEN = 0;
    PREWRITE = 1;
    COMMIT = 2;
    ABORT = 3;
    GET = 4;
  }
  required Action action = 1;
  required int64 checkpointId = 2;
  optional int64 tableId = 3;
  message Meta {
    required string clientName = 1;
    required string clientVersion = 2;
  }
  optional Meta meta = 4;
  optional int64 parallelism = 5;
}

message TxnResponse {
  enum Status {
    NEW = 0;
    PREWRITE = 1;
    COMMITTED = 2;
    ABORTED = 3;
  }
  required int64 checkpointId = 1;
  required int64 startTs = 2;
  optional int64 commitTs = 3;
  optional bytes primaryKey = 4;
  optional Status status = 5 [default = NEW];
  message Meta {
    required string serverName = 1;
    required string serverVersion = 2;
  }
  optional Meta meta = 6;
}
